--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
   --background-start-rgb: 241 234 242;
   --background-end-rgb: 224 187 226;
-  --svg-color: rgb(50 172 23);
+  --svg-color: rgb(68, 234, 31);
   --svg-color-second: #af69f099;
 }
 
