--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -11,9 +11,10 @@
 
   @media(max-width: 800px) {
     flex-direction: column;
-    gap: 100px;
+    gap: 30px;
     align-items: center;
     padding-inline: 15px;
+    padding-block-end: 20px;
   }
 }
 
@@ -24,10 +25,14 @@
   justify-content: center;
   align-items: center;
   font-size: 34px;
+
+    @media(max-width: 800px) {
+      height: 30%;
+    }
 }
 
 .formContainer {
-  height: 100%;
+  height: 90%;
   width: 100%;
   background-color: #d578f72b;
   border-radius: 10px;
@@ -36,7 +41,7 @@
   align-items: center;
 
   @media(max-width: 800px) {
-    /* height: 50%; */
+    height: 70%;
     padding-block-start: 30px;
   }
 }
