--- a/src/app/portfolio/portfolio.module.css
+++ b/src/app/portfolio/portfolio.module.css
@@ -55,7 +55,7 @@
   height: 100vh;
   width: 100vw;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background: linear-gradient(rgb(224 187 226), rgb(198, 141, 201));
   padding-block-end: 40px;
   padding-block-start: 40px;
