--- a/src/app/portfolio/portfolio.module.css
+++ b/src/app/portfolio/portfolio.module.css
@@ -59,14 +59,23 @@
   background: linear-gradient(rgb(224 187 226), rgb(198, 141, 201));
   padding-block-end: 40px;
   padding-block-start: 40px;
+
+  @media(max-width: 460px) {
+    padding-block-end: 10px;
+    padding-block-start: 15px;
+  }
 }
 
 .item {
   display: flex;
   flex-direction: column;
   gap: 20px;
- justify-content: center;
- align-items: center;
+  justify-content: center;
+  align-items: center;
+
+  @media(max-width: 460px) {
+    gap: 10px;
+ }
 }
 
 .title {
@@ -103,7 +112,8 @@
   }
 
   @media(max-width: 460px) {
-    width: 250px;
+    width: 270px;
+    line-height: 1.2;
   }
 }
 
@@ -120,6 +130,10 @@
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease-in;
+
+  @media(max-width: 460px) {
+    padding: 15px;
+  }
 }
 
 .btn:hover {
